Add c9 nodeset with switch
To allow install of br-ex bridges on standalone jobs, defining a new
c9 nodeset for standalone jobs w/o switch. Setup of br-ex is part of
switch group

Change-Id: I26488cf996bebb295b8fc2ca29177af9bea49678

--- a/zuul.d/nodesets.yaml
+++ b/zuul.d/nodesets.yaml
@@ -392,6 +392,18 @@
       - name: peers
         nodes: []
 
+- nodeset:
+    name: single-centos-9-stream-node-vexxhost
+    nodes:
+      - name: primary
+        label: cloud-centos-9-stream
+    groups:
+      - name: switch
+        nodes:
+          - primary
+      - name: peers
+        nodes: []
+
 # Fake nested-virt nodeset - default to PSI
 - nodeset:
     name: single-centos-8-node-nested-virt
