--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -1,12 +1,8 @@
 - project:
     check:
       jobs: &jobs
-        - rdo-tox-molecule-delegated-centos-8: &molecule
-            files:
-              - .*molecule.*
-              - ^roles
-              - ^requirements.txt
-              - ^test-requirements.txt
-              - ^tox.ini$
-    gate:
-      jobs: *jobs
+        - periodic-tripleo-ci-build-containers-ubi-8-push:
+            vars:
+              buildcontainers_override_repos: current-tripleo
+              promote_source: current-tripleo
+              force_periodic: true
