Multinode periodic validation job for security component
Signed-off-by: Jiri Podivin <jpodivin@redhat.com>
Change-Id: I53bb0670c136aa879a1547dda26d4f5510d2c9e9

--- a/zuul.d/component-jobs-wallaby.yaml
+++ b/zuul.d/component-jobs-wallaby.yaml
@@ -312,6 +312,13 @@
     vars:
       component: compute
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-security-wallaby-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-wallaby-1ctlr-1comp
+    vars:
+      component: security
+      validations_inventory: "config-download/overcloud/tripleo-ansible-inventory.yaml"
+
 ## standalone component jobs
 
 - job:
