--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -428,6 +428,13 @@
       component: compute
       validations_inventory: "config-download/overcloud/tripleo-ansible-inventory.yaml"
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-security-master-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master-1ctlr-1comp
+    vars:
+      component: security
+      validations_inventory: "config-download/overcloud/tripleo-ansible-inventory.yaml"
+
 ## standalone component jobs
 
 - job:
