Multinode periodic validation job for security component
Signed-off-by: Jiri Podivin <jpodivin@redhat.com>
Change-Id: I53bb0670c136aa879a1547dda26d4f5510d2c9e9

--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -375,6 +375,12 @@
       extra_tags:
         - component-validations
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-security-master-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    vars:
+      component: security
+
 ## standalone component jobs
 
 - job:
