Multinode periodic validation job for security component
Signed-off-by: Jiri Podivin <jpodivin@redhat.com>
Change-Id: I53bb0670c136aa879a1547dda26d4f5510d2c9e9

--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -429,6 +429,13 @@
       component: compute
       validations_inventory: "config-download/overcloud/tripleo-ansible-inventory.yaml"
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-security-master-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-1ctlr-1comp-validation-master
+    vars:
+      component: security
+      validations_inventory: "config-download/overcloud/tripleo-ansible-inventory.yaml"
+
 ## standalone component jobs
 
 - job:
