--- a/zuul.d/rdoinfo-jobs.yaml
+++ b/zuul.d/rdoinfo-jobs.yaml
@@ -322,6 +322,97 @@
       centos_releasever: 8s
 
 - job:
+    name: rdoinfo-tripleo-xena-release-centos-8-scenario001-standalone
+    parent: tripleo-ci-centos-8-scenario001-standalone
+    nodeset: single-centos-8-node-vexxhost
+    run: playbooks/run-rdoinfo-cbs-centos8.yaml
+    post-run: playbooks/post-rdoinfo.yaml
+    override-checkout: "stable/xena"
+    vars:
+      rdoinfo_release: xena
+      rdoinfo_phase: release
+      branch_override: "cloudsig/xena"
+      build_container_images: true
+      centos_releasever: 8s
+
+- job:
+    name: rdoinfo-tripleo-xena-release-centos-8-scenario002-standalone
+    parent: tripleo-ci-centos-8-scenario002-standalone
+    nodeset: single-centos-8-node-vexxhost
+    run: playbooks/run-rdoinfo-cbs-centos8.yaml
+    post-run: playbooks/post-rdoinfo.yaml
+    roles:
+      - zuul: opendev.org/openstack/tripleo-ansible
+    override-checkout: "stable/xena"
+    vars:
+      rdoinfo_release: xena
+      rdoinfo_phase: release
+      branch_override: "cloudsig/xena"
+      build_container_images: true
+      centos_releasever: 8s
+
+- job:
+    name: rdoinfo-tripleo-xena-release-centos-8-scenario003-standalone
+    parent: tripleo-ci-centos-8-scenario003-standalone
+    nodeset: single-centos-8-node-vexxhost
+    run: playbooks/run-rdoinfo-cbs-centos8.yaml
+    post-run: playbooks/post-rdoinfo.yaml
+    roles:
+      - zuul: opendev.org/openstack/tripleo-ansible
+    override-checkout: "stable/xena"
+    vars:
+      rdoinfo_release: xena
+      rdoinfo_phase: release
+      branch_override: "cloudsig/xena"
+      build_container_images: true
+      centos_releasever: 8s
+
+- job:
+    name: rdoinfo-tripleo-xena-release-centos-8-scenario004-standalone
+    parent: tripleo-ci-centos-8-scenario004-standalone
+    nodeset: single-centos-8-node-vexxhost
+    run: playbooks/run-rdoinfo-cbs-centos8.yaml
+    post-run: playbooks/post-rdoinfo.yaml
+    roles:
+      - zuul: opendev.org/openstack/tripleo-ansible
+    override-checkout: "stable/xena"
+    vars:
+      rdoinfo_release: xena
+      rdoinfo_phase: release
+      branch_override: "cloudsig/xena"
+      build_container_images: true
+      centos_releasever: 8s
+
+- job:
+    name: rdoinfo-tripleo-xena-release-centos-8-scenario007-standalone
+    parent: tripleo-ci-centos-8-scenario007-standalone
+    nodeset: single-centos-8-node-vexxhost
+    run: playbooks/run-rdoinfo-cbs-centos8.yaml
+    post-run: playbooks/post-rdoinfo.yaml
+    roles:
+      - zuul: opendev.org/openstack/tripleo-ansible
+    override-checkout: "stable/xena"
+    vars:
+      rdoinfo_release: xena
+      rdoinfo_phase: release
+      branch_override: "cloudsig/xena"
+      build_container_images: true
+      centos_releasever: 8s
+
+- job:
+    name: rdoinfo-tripleo-xena-release-centos-8-undercloud-containers
+    parent: tripleo-ci-centos-8-undercloud-containers
+    nodeset: single-centos-8-node-vexxhost
+    run: playbooks/run-rdoinfo-cbs-centos8.yaml
+    override-checkout: "stable/xena"
+    vars:
+      rdoinfo_release: xena
+      rdoinfo_phase: release
+      branch_override: "cloudsig/xena"
+      build_container_images: true
+      centos_releasever: 8s
+
+- job:
     name: rdoinfo-tripleo-victoria-release-centos-8-scenario002-standalone
     parent: tripleo-ci-centos-8-scenario002-standalone
     nodeset: single-centos-8-node-vexxhost
