--- a/zuul.d/rdoinfo-templates.yaml
+++ b/zuul.d/rdoinfo-templates.yaml
@@ -20,8 +20,44 @@
             voting: false
             files:
               - ^buildsys-tags/cloud8s-openstack-yoga-testing.yml$
+        - rdoinfo-tripleo-xena-release-centos-8-scenario001-standalone:
+            dependencies:
+              - validate-buildsys-tags
+            voting: false
+            files:
+              - ^buildsys-tags/cloud8s-openstack-xena-release.yml$
     experimental:
       jobs:
+        - rdoinfo-tripleo-xena-release-centos-8-scenario002-standalone:
+            dependencies:
+              - validate-buildsys-tags
+            voting: false
+            files:
+              - ^buildsys-tags/cloud8s-openstack-xena-release.yml$
+        - rdoinfo-tripleo-xena-release-centos-8-scenario003-standalone:
+            dependencies:
+              - validate-buildsys-tags
+            voting: false
+            files:
+              - ^buildsys-tags/cloud8s-openstack-xena-release.yml$
+        - rdoinfo-tripleo-xena-release-centos-8-scenario004-standalone:
+            dependencies:
+              - validate-buildsys-tags
+            voting: false
+            files:
+              - ^buildsys-tags/cloud8s-openstack-xena-release.yml$
+        - rdoinfo-tripleo-xena-release-centos-8-scenario007-standalone:
+            dependencies:
+              - validate-buildsys-tags
+            voting: false
+            files:
+              - ^buildsys-tags/cloud8s-openstack-xena-release.yml$
+        - rdoinfo-tripleo-xena-release-centos-8-undercloud-containers:
+            dependencies:
+              - validate-buildsys-tags
+            voting: false
+            files:
+              - ^buildsys-tags/cloud8s-openstack-xena-release.yml$
         - rdoinfo-tripleo-master-testing-centos-8-scenario002-standalone:
             dependencies:
               - validate-buildsys-tags
