Multinode periodic validation job for octavia component
Signed-off-by: Jiri Podivin <jpodivin@redhat.com>
Change-Id: I5e12a506bc0dc3988c98ef345a1be38b93181051

--- a/zuul.d/component-jobs-wallaby.yaml
+++ b/zuul.d/component-jobs-wallaby.yaml
@@ -292,6 +292,12 @@
       release: wallaby
       branch_override: 'stable/wallaby'
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-octavia-wallaby-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-wallaby
+    vars:
+      component: octavia
+
 ## standalone component jobs
 
 - job:
