--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -370,6 +370,12 @@
       extra_tags:
         - component-validations
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-octavia-master-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    vars:
+      component: octavia
+
 ## standalone component jobs
 
 - job:
