Multinode validation component jobs for tripleo
Multinode validation jobs for tripleo component
were added to master and wallaby branches.

Porting jobs to older branches should be only done on per-case
basis, following effectivness evaluation and consultation

Depends-On: https://review.opendev.org/c/openstack/tripleo-quickstart-extras/+/814801

Signed-off-by: Jiri Podivin <jpodivin@redhat.com>
Change-Id: I49b5ce30401c1fddb8ac102008898fdc556692f1

--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -375,6 +375,17 @@
       extra_tags:
         - component-validations
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-tripleo-master-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    description: |
+      Sets the 'validations_inventory' variable to ensure that proper inventory
+      is used by the executed validations. The default inventory path is set in
+      the 'validations.yml' playbook as 'tripleo-deploy/tripleo-ansible-inventory.yaml'.
+    vars:
+      component: tripleo
+      validations_inventory: "tripleo-deploy/undercloud/tripleo-ansible-inventory.yaml"
+
 ## standalone component jobs
 
 - job:
