--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -375,6 +375,13 @@
       extra_tags:
         - component-validations
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-tripleo-master-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-validation-master
+    vars:
+      component: tripleo
+      validations_inventory: "tripleo-deploy/undercloud/tripleo-ansible-inventory.yaml"
+
 ## standalone component jobs
 
 - job:
