--- a/zuul.d/integration-pipeline-main-centos9.yaml
+++ b/zuul.d/integration-pipeline-main-centos9.yaml
@@ -8,4 +8,7 @@
         - periodic-tripleo-ci-build-containers-centos-9-push-master:
             dependencies:
               - periodic-tripleo-centos-9-master-promote-promoted-components-to-tripleo-ci-testing
+        - periodic-tripleo-ci-centos-9-standalone-full-tempest-scenario-master:
+            dependencies:
+              - periodic-tripleo-ci-build-containers-centos-9-push-master
         - periodic-tripleo-centos-9-master-promote-promoted-components-to-tripleo-ci-testing
