--- a/zuul.d/integration-jobs-cs9-master.yaml
+++ b/zuul.d/integration-jobs-cs9-master.yaml
@@ -1,8 +1,12 @@
 ---
+# Centos9 stream master jobs
+## promote to tripleo-ci-testing
 - job:
-    name: periodic-tripleo-ci-centos-9-standalone-master
-    parent: periodic-tripleo-ci-centos-8-standalone-master
-    nodeset: single-centos-9-stream-node-vexxhost
+    name: periodic-tripleo-centos-9-master-promote-promoted-components-to-tripleo-ci-testing
+    parent: periodic-tripleo-centos-8-master-promote-promoted-components-to-tripleo-ci-testing
+    nodeset: cloud-centos-9-stream-vexxhost
+
+## containers/images
 - job:
     name: periodic-tripleo-ci-build-containers-centos-9-push-master
     parent: periodic-tripleo-ci-build-containers-ubi-8-push
@@ -12,7 +16,19 @@
       containers_base_image: quay.io/centos/centos:stream9-development
       registry_namespace: tripleomastercentos9
       promote_source: tripleo-ci-testing
+
+## standalone
 - job:
-    name: periodic-tripleo-centos-9-master-promote-promoted-components-to-tripleo-ci-testing
-    parent: periodic-tripleo-centos-8-master-promote-promoted-components-to-tripleo-ci-testing
-    nodeset: cloud-centos-9-stream-vexxhost
+    name: periodic-tripleo-ci-centos-9-standalone-master
+    parent: periodic-tripleo-ci-centos-8-standalone-master
+    nodeset: single-centos-9-stream-node-vexxhost
+
+- job:
+    name: periodic-tripleo-ci-centos-9-standalone-full-tempest-api-master
+    parent: periodic-tripleo-ci-centos-8-standalone-full-tempest-api-master
+    nodeset: single-centos-9-stream-node-vexxhost
+
+- job:
+    name: periodic-tripleo-ci-centos-9-standalone-full-tempest-scenario-master
+    parent: periodic-tripleo-ci-centos-8-standalone-full-tempest-scenario-master
+    nodeset: single-centos-9-stream-node-vexxhost
