--- a/zuul.d/integration-jobs-cs9-master.yaml
+++ b/zuul.d/integration-jobs-cs9-master.yaml
@@ -8,6 +8,15 @@
       containers_base_image: quay.io/centos/centos:stream9-development
       registry_namespace: tripleomastercentos9
       promote_source: tripleo-ci-testing
+
+- job:
+    name: periodic-tripleo-ci-centos-9-standalone-full-tempest-scenario-master
+    parent: periodic-tripleo-ci-centos-8-standalone-full-tempest-scenario-master
+    nodeset: single-centos-9-stream-node-vexxhost
+    vars:
+      report_dlrn: false
+      force_periodic: true
+
 - job:
     name: periodic-tripleo-centos-9-master-promote-promoted-components-to-tripleo-ci-testing
     parent: periodic-tripleo-centos-8-master-promote-promoted-components-to-tripleo-ci-testing
