Add ovb 3ctlr 1 comp for Component Validation jobs
Depends-On: https://review.opendev.org/c/openstack/validations-common/+/813174
Change-Id: Ie7064d664b28d813e91561eb731b9b49ee255e90

--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -305,6 +305,33 @@
     vars:
       component: security
 
+## validation ovb jobs:
+
+- job:
+    name: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-tripleo-master-validation
+    parent: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-tripleo-master
+    vars:
+      enable_validation: true
+
+- job:
+    name: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-validation-master-validation
+    parent: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-component-master
+    vars:
+      component: validation
+      enable_validation: true
+
+- job:
+    name: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-network-master-validation
+    parent: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-network-master
+    vars:
+      enable_validation: true
+
+- job:
+    name: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-compute-master-validation
+    parent: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-component-master
+    vars:
+      component: compute
+      enable_validation: true
 
 ## multinode component jobs
 
