Multinode validation component jobs for network
Signed-off-by: Jiri Podivin <jpodivin@redhat.com>
Change-Id: Iaf50d8321572a4cf5d5151d320a880ae287c0ee6

--- a/zuul.d/component-jobs-wallaby.yaml
+++ b/zuul.d/component-jobs-wallaby.yaml
@@ -313,6 +313,12 @@
       validations_inventory: "config-download/overcloud/tripleo-ansible-inventory.yaml"
       component: compute
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-network-wallaby-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-1ctlr-1comp-validation-wallaby
+    vars:
+      component: network
+
 ## standalone component jobs
 
 - job:
