--- a/zuul.d/component-jobs-master.yaml
+++ b/zuul.d/component-jobs-master.yaml
@@ -433,6 +433,16 @@
       component: compute
       validations_inventory: "config-download/overcloud/tripleo-ansible-inventory.yaml"
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-network-master-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-1ctlr-1comp-validation-master
+    description: |
+      Sets the 'validations_inventory' to retrieve overcloud inventory
+      from the '~/config-download' dir.
+    vars:
+      component: network
+      validations_inventory: "config-download/overcloud/tripleo-ansible-inventory.yaml"
+
 ## standalone component jobs
 
 - job:
