--- a/zuul.d/integration-jobs-cs9-master.yaml
+++ b/zuul.d/integration-jobs-cs9-master.yaml
@@ -1,5 +1,9 @@
 ---
 - job:
+    name: periodic-tripleo-ci-centos-9-standalone-master
+    parent: periodic-tripleo-ci-centos-8-standalone-master
+    nodeset: single-centos-9-stream-node-vexxhost
+- job:
     name: periodic-tripleo-ci-build-containers-centos-9-push-master
     parent: periodic-tripleo-ci-build-containers-ubi-8-push
     nodeset: cloud-centos-9-stream-vexxhost
