Added two-centos-9-nodes-vexxhost for fs10
In order to test fs10 containers-multinode job, we need
two-centos-9-nodes-vexxhost as the similar nodeset is used
for cs8[1.]

[1]. https://review.rdoproject.org/r/gitweb?p=config.git;a=blob;f=zuul.d/tripleo-rdo-base.yaml#l142

Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>
Change-Id: I30d343dd57f56ae370a936b22cf443e7b931e67c

--- a/zuul.d/nodesets.yaml
+++ b/zuul.d/nodesets.yaml
@@ -404,6 +404,24 @@
       - name: peers
         nodes: []
 
+- nodeset:
+    name: two-centos-9-nodes-vexxhost
+    nodes:
+      - name: primary
+        label: cloud-centos-9-stream
+      - name: secondary
+        label: cloud-centos-9-stream
+    groups:
+      - name: switch
+        nodes:
+          - primary
+      - name: peers
+        nodes:
+          - secondary
+      - name: subnodes
+        nodes:
+          - secondary
+
 # Fake nested-virt nodeset - default to PSI
 - nodeset:
     name: single-centos-8-node-nested-virt
