--- a/zuul.d/integration-jobs-cs9-master.yaml
+++ b/zuul.d/integration-jobs-cs9-master.yaml
@@ -32,3 +32,9 @@
     name: periodic-tripleo-ci-centos-9-standalone-full-tempest-scenario-master
     parent: periodic-tripleo-ci-centos-8-standalone-full-tempest-scenario-master
     nodeset: single-centos-9-stream-node-vexxhost
+
+## multinode
+- job:
+    name: periodic-tripleo-ci-centos-9-containers-multinode-master
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-master
+    nodeset: two-centos-9-nodes-vexxhost
