--- a/playbooks/base/pre.yaml
+++ b/playbooks/base/pre.yaml
@@ -13,6 +13,15 @@
       changed_when: false
       register: _worker_is_sudoer
 
+    - name: remove removal of tmp files
+      # noqa 303
+      become: true
+      shell:
+        cmd: |
+          sed -i '/30d/d' /usr/lib/tmpfiles.d/tmp.conf;
+          sed -i '/10d/d' /usr/lib/tmpfiles.d/tmp.conf
+      changed_when: true
+
     - import_role:
         name: configure-mirrors
       vars:
