Add C9 stream scenario001 job
This patch:
- Defines new job periodic-tripleo-ci-centos-9-scenario001-standalone-master
- Add C9 scenario001 job under project-template:
  openstack-periodic-integration-main-cs9 for periodic run.

Test project: https://review.rdoproject.org/r/c/testproject/+/36475

Story: #TRIPLEOCI-694

Change-Id: Ie2ecfbaed5a8233cd7453d82ba88f83e94f8eb75

--- a/zuul.d/integration-jobs-cs9-master.yaml
+++ b/zuul.d/integration-jobs-cs9-master.yaml
@@ -34,6 +34,11 @@
     nodeset: single-centos-9-stream-node-vexxhost
 
 - job:
+    name: periodic-tripleo-ci-centos-9-scenario001-standalone-master
+    parent: periodic-tripleo-ci-centos-8-scenario001-standalone-master
+    nodeset: single-centos-9-stream-node-vexxhost
+
+- job:
     name: periodic-tripleo-ci-centos-9-scenario002-standalone-master
     parent: periodic-tripleo-ci-centos-8-scenario002-standalone-master
     nodeset: single-centos-9-stream-node-vexxhost
