Add C9 stream scenario001-004 job
This patch:
- Defines new job periodic-tripleo-ci-centos-9-scenario001/2/3/4-standalone-master
- Add C9 scenario jobs under project-template:
  openstack-periodic-integration-main-cs9 for periodic run.

  Story: #TRIPLEOCI-694

Change-Id: Ie2ecfbaed5a8233cd7453d82ba88f83e94f8eb75

--- a/zuul.d/integration-jobs-cs9-master.yaml
+++ b/zuul.d/integration-jobs-cs9-master.yaml
@@ -1,4 +1,33 @@
 ---
+
+## Standalone
+
+- job:
+    name: periodic-tripleo-ci-centos-9-scenario001-standalone-master
+    parent: periodic-tripleo-ci-centos-8-scenario001-standalone-master
+    vars:
+      nodeset: single-centos-9-stream-node-vexxhost
+
+- job:
+    name: periodic-tripleo-ci-centos-9-scenario002-standalone-master
+    parent: periodic-tripleo-ci-centos-8-scenario002-standalone-master
+    vars:
+      nodeset: single-centos-9-stream-node-vexxhost
+
+- job:
+    name: periodic-tripleo-ci-centos-9-scenario003-standalone-master
+    parent: periodic-tripleo-ci-centos-8-scenario003-standalone-master
+    vars:
+      nodeset: single-centos-9-stream-node-vexxhost
+
+- job:
+    name: periodic-tripleo-ci-centos-9-scenario004-standalone-master
+    parent: periodic-tripleo-ci-centos-8-scenario004-standalone-master
+    vars:
+      nodeset: single-centos-9-stream-node-vexxhost
+
+## containers/images
+
 - job:
     name: periodic-tripleo-ci-build-containers-centos-9-push-master
     parent: periodic-tripleo-ci-build-containers-ubi-8-push
