--- a/zuul.d/integration-pipeline-main-centos9.yaml
+++ b/zuul.d/integration-pipeline-main-centos9.yaml
@@ -8,6 +8,18 @@
         - periodic-tripleo-ci-centos-9-standalone-master:
             dependencies:
               - periodic-tripleo-ci-build-containers-centos-9-push-master
+        - periodic-tripleo-ci-centos-9-scenario001-standalone-master:
+            dependencies:
+              - periodic-tripleo-ci-build-containers-centos-9-push-master
+        - periodic-tripleo-ci-centos-9-scenario002-standalone-master:
+            dependencies:
+              - periodic-tripleo-ci-build-containers-centos-9-push-master
+        - periodic-tripleo-ci-centos-9-scenario003-standalone-master:
+            dependencies:
+              - periodic-tripleo-ci-build-containers-centos-9-push-master
+        - periodic-tripleo-ci-centos-9-scenario004-standalone-master:
+            dependencies:
+              - periodic-tripleo-ci-build-containers-centos-9-push-master
         - periodic-tripleo-ci-centos-9-standalone-full-tempest-scenario-master:
             dependencies:
               - periodic-tripleo-ci-build-containers-centos-9-push-master
