Multinode validation component jobs for compute
Multinode validation jobs for comput component
were added to master and wallaby branches.

Porting jobs to older branches should be only done on per-case
basis, following effectivness evaluation and consultations.

The job uses nodeset and an abstract job introduced in previous patch.

Signed-off-by: Jiri Podivin <jpodivin@redhat.com>
Change-Id: Iea43f55a114f285fd066e45b1a9492439cfb46d0

--- a/zuul.d/component-jobs-wallaby.yaml
+++ b/zuul.d/component-jobs-wallaby.yaml
@@ -306,6 +306,13 @@
     vars:
       component: tripleo
 
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-multinode-compute-wallaby-validation
+    parent: periodic-tripleo-ci-centos-8-containers-multinode-1ctlr-1comp-validation-wallaby
+    vars:
+      validations_inventory: "config-download/overcloud/tripleo-ansible-inventory.yaml"
+      component: compute
+
 ## standalone component jobs
 
 - job:
