Wire up c9 image build jobs in template.
Add c9 image build jobs under project-template:
  openstack-periodic-integration-main-cs9 for periodic run.

These jobs are added  in commit [1], testproject [2].

[1] https://review.rdoproject.org/r/c/config/+/36234
[2] https://review.rdoproject.org/r/c/testproject/+/32054

Change-Id: Ie7b6106edb907cd2276eb07213d47e79b351cc44

--- a/zuul.d/integration-pipeline-main-centos9.yaml
+++ b/zuul.d/integration-pipeline-main-centos9.yaml
@@ -17,4 +17,13 @@
         - periodic-tripleo-ci-build-containers-centos-9-push-master:
             dependencies:
               - periodic-tripleo-centos-9-master-promote-promoted-components-to-tripleo-ci-testing
+        - periodic-tripleo-centos-9-buildimage-overcloud-hardened-uefi-full-master:
+            dependencies:
+              - periodic-tripleo-centos-9-master-promote-promoted-components-to-tripleo-ci-testing
+        - periodic-tripleo-centos-9-buildimage-overcloud-full-master:
+            dependencies:
+              - periodic-tripleo-centos-9-master-promote-promoted-components-to-tripleo-ci-testing
+        - periodic-tripleo-centos-9-buildimage-ironic-python-agent-master:
+            dependencies:
+              - periodic-tripleo-centos-9-master-promote-promoted-components-to-tripleo-ci-testing
         - periodic-tripleo-centos-9-master-promote-promoted-components-to-tripleo-ci-testing
