--- a/zuul.d/integration-jobs-cs9-master.yaml
+++ b/zuul.d/integration-jobs-cs9-master.yaml
@@ -32,3 +32,13 @@
     name: periodic-tripleo-ci-centos-9-standalone-full-tempest-scenario-master
     parent: periodic-tripleo-ci-centos-8-standalone-full-tempest-scenario-master
     nodeset: single-centos-9-stream-node-vexxhost
+
+- job:
+    name: periodic-tripleo-ci-centos-9-scenario002-standalone-master
+    parent: periodic-tripleo-ci-centos-8-scenario002-standalone-master
+    nodeset: single-centos-9-stream-node-vexxhost
+
+- job:
+    name: periodic-tripleo-ci-centos-9-scenario003-standalone-master
+    parent: periodic-tripleo-ci-centos-8-scenario003-standalone-master
+    nodeset: single-centos-9-stream-node-vexxhost
