--- a/zuul.d/integration-pipeline-main-centos9.yaml
+++ b/zuul.d/integration-pipeline-main-centos9.yaml
@@ -14,6 +14,12 @@
         - periodic-tripleo-ci-centos-9-standalone-full-tempest-api-master:
             dependencies:
               - periodic-tripleo-ci-build-containers-centos-9-push-master
+        - periodic-tripleo-ci-centos-9-scenario002-standalone-master:
+            dependencies:
+              - periodic-tripleo-ci-build-containers-centos-9-push-master
+        - periodic-tripleo-ci-centos-9-scenario003-standalone-master:
+            dependencies:
+              - periodic-tripleo-ci-build-containers-centos-9-push-master
         - periodic-tripleo-ci-build-containers-centos-9-push-master:
             dependencies:
               - periodic-tripleo-centos-9-master-promote-promoted-components-to-tripleo-ci-testing
