Scenario 10 jobs for cs9
This patch has the following jobs:
- periodic-tripleo-ci-centos-9-scenario010-standalone-master
- periodic-tripleo-ci-centos-9-scenario010-kvm-standalone-master
- periodic-tripleo-ci-centos-9-scenario010-ovn-provider-standalone-master

Signed-off-by: Amol Kahat <amolkahat@gmail.com>
Change-Id: I264c850da6f8eaa39bddffe700db9d3d4f886e3e

--- a/zuul.d/integration-jobs-cs9-master.yaml
+++ b/zuul.d/integration-jobs-cs9-master.yaml
@@ -42,3 +42,18 @@
     name: periodic-tripleo-ci-centos-9-scenario003-standalone-master
     parent: periodic-tripleo-ci-centos-8-scenario003-standalone-master
     nodeset: single-centos-9-stream-node-vexxhost
+
+- job:
+    name: periodic-tripleo-ci-centos-9-scenario010-standalone-master
+    parent: periodic-tripleo-ci-centos-8-scenario010-standalone-master
+    nodeset: single-centos-9-stream-node-vexxhost
+
+- job:
+    name: periodic-tripleo-ci-centos-9-scenario010-kvm-standalone-master
+    parent: periodic-tripleo-ci-centos-8-scenario010-kvm-standalone-master
+    nodeset: single-centos-9-stream-node-vexxhost
+
+- job:
+    name: periodic-tripleo-ci-centos-9-scenario010-ovn-provider-standalone-master
+    parent: periodic-tripleo-ci-centos-8-scenario010-ovn-provider-standalone-master
+    nodeset: single-centos-9-stream-node-vexxhost
