Use cloud-centos-9-stream-vexxhost label for cs9
cloud-centos-9-stream exists in sf and tripleo nodepool tenant
because of that ssh connection timeout and ovb jobs are not
working.

https://softwarefactory-project.io/r/c/config/+/23007 adds
a new label cloud-centos-9-stream-vexxhost for tripleo provider.

We are going to use the same.
it also the cs9 ovb nodeset.

Depends-On: https://softwarefactory-project.io/r/c/config/+/23007

Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>
Change-Id: I5363982ccbaa5270d52d4ada5213a0e9916799b4

--- a/zuul.d/nodesets.yaml
+++ b/zuul.d/nodesets.yaml
@@ -385,7 +385,7 @@
     name: cloud-centos-9-stream-vexxhost
     nodes:
       - name: primary
-        label: cloud-centos-9-stream
+        label: cloud-centos-9-stream-vexxhost
     groups:
       - name: switch
         nodes: []
@@ -396,7 +396,7 @@
     name: single-centos-9-stream-node-vexxhost
     nodes:
       - name: primary
-        label: cloud-centos-9-stream
+        label: cloud-centos-9-stream-vexxhost
     groups:
       - name: switch
         nodes:
@@ -408,9 +408,9 @@
     name: two-centos-9-nodes-vexxhost
     nodes:
       - name: primary
-        label: cloud-centos-9-stream
+        label: cloud-centos-9-stream-vexxhost
       - name: secondary
-        label: cloud-centos-9-stream
+        label: cloud-centos-9-stream-vexxhost
     groups:
       - name: switch
         nodes:
@@ -421,6 +421,17 @@
       - name: subnodes
         nodes:
           - secondary
+
+- nodeset:
+    name: tripleo-ovb-centos-9-primary-vexxhost
+    nodes:
+      - name: primary
+        label: cloud-centos-9-stream-vexxhost
+    groups:
+      - name: switch
+        nodes: []
+      - name: peers
+        nodes: []
 
 # Fake nested-virt nodeset - default to PSI
 - nodeset:
