--- a/zuul.d/nodesets.yaml
+++ b/zuul.d/nodesets.yaml
@@ -422,6 +422,17 @@
         nodes:
           - secondary
 
+- nodeset:
+    name: tripleo-ovb-centos-9-primary-vexxhost
+    nodes:
+      - name: primary
+        label: cloud-centos-9-stream
+    groups:
+      - name: switch
+        nodes: []
+      - name: peers
+        nodes: []
+
 # Fake nested-virt nodeset - default to PSI
 - nodeset:
     name: single-centos-8-node-nested-virt
