--- a/zuul.d/integration-pipeline-wallaby.yaml
+++ b/zuul.d/integration-pipeline-wallaby.yaml
@@ -6,101 +6,48 @@
       jobs:
         ##### wallaby #####
         ## containers/images
-        - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby:
+        - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby: &comp_to_tripleo_ci_testing_wallaby
             dependencies:
               - periodic-tripleo-centos-8-wallaby-promote-promoted-components-to-tripleo-ci-testing
-        - periodic-tripleo-centos-8-buildimage-overcloud-hardened-uefi-full-wallaby:
-            dependencies:
-              - periodic-tripleo-centos-8-wallaby-promote-promoted-components-to-tripleo-ci-testing
-        - periodic-tripleo-centos-8-buildimage-overcloud-full-wallaby:
-            dependencies:
-              - periodic-tripleo-centos-8-wallaby-promote-promoted-components-to-tripleo-ci-testing
-        - periodic-tripleo-centos-8-buildimage-ironic-python-agent-wallaby:
-            dependencies:
-              - periodic-tripleo-centos-8-wallaby-promote-promoted-components-to-tripleo-ci-testing
+        - periodic-tripleo-centos-8-buildimage-overcloud-hardened-uefi-full-wallaby: *comp_to_tripleo_ci_testing_wallaby
+        - periodic-tripleo-centos-8-buildimage-overcloud-full-wallaby: *comp_to_tripleo_ci_testing_wallaby
+        - periodic-tripleo-centos-8-buildimage-ironic-python-agent-wallaby: *comp_to_tripleo_ci_testing_wallaby
         ## standalone
-        - periodic-tripleo-ci-centos-8-standalone-wallaby:
+        - periodic-tripleo-ci-centos-8-standalone-wallaby: &build_containers_ubi_wallaby
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-        - periodic-tripleo-ci-centos-8-scenario001-standalone-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-        - periodic-tripleo-ci-centos-8-scenario002-standalone-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-        - periodic-tripleo-ci-centos-8-scenario003-standalone-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-        - periodic-tripleo-ci-centos-8-scenario004-standalone-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-        - periodic-tripleo-ci-centos-8-scenario007-standalone-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-        - periodic-tripleo-ci-centos-8-scenario010-standalone-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-        - periodic-tripleo-ci-centos-8-scenario012-standalone-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-        - periodic-tripleo-ci-centos-8-standalone-full-tempest-api-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-        - periodic-tripleo-ci-centos-8-standalone-full-tempest-scenario-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-        - periodic-tripleo-ci-centos-8-scenario010-ovn-provider-standalone-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-        - periodic-tripleo-ci-centos-8-standalone-on-multinode-ipa-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-        - periodic-tripleo-ci-centos-8-standalone-upgrade-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
+        - periodic-tripleo-ci-centos-8-scenario001-standalone-wallaby: *build_containers_ubi_wallaby
+        - periodic-tripleo-ci-centos-8-scenario002-standalone-wallaby: *build_containers_ubi_wallaby
+        - periodic-tripleo-ci-centos-8-scenario003-standalone-wallaby: *build_containers_ubi_wallaby
+        - periodic-tripleo-ci-centos-8-scenario004-standalone-wallaby: *build_containers_ubi_wallaby
+        - periodic-tripleo-ci-centos-8-scenario007-standalone-wallaby: *build_containers_ubi_wallaby
+        - periodic-tripleo-ci-centos-8-scenario010-standalone-wallaby: *build_containers_ubi_wallaby
+        - periodic-tripleo-ci-centos-8-scenario012-standalone-wallaby: *build_containers_ubi_wallaby
+        - periodic-tripleo-ci-centos-8-standalone-full-tempest-api-wallaby: *build_containers_ubi_wallaby
+        - periodic-tripleo-ci-centos-8-standalone-full-tempest-scenario-wallaby: *build_containers_ubi_wallaby
+        - periodic-tripleo-ci-centos-8-scenario010-ovn-provider-standalone-wallaby: *build_containers_ubi_wallaby
+        - periodic-tripleo-ci-centos-8-standalone-on-multinode-ipa-wallaby: *build_containers_ubi_wallaby
+        - periodic-tripleo-ci-centos-8-standalone-upgrade-wallaby: *build_containers_ubi_wallaby
+        - periodic-tripleo-ci-centos-8-scenario010-kvm-standalone-wallaby: *build_containers_ubi_wallaby
         ## ovb
         - periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-wallaby:
-            dependencies:
+            dependencies: &ovb_deps_wallaby
               - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
               - periodic-tripleo-centos-8-buildimage-overcloud-full-wallaby
               - periodic-tripleo-centos-8-buildimage-overcloud-hardened-uefi-full-wallaby
               - periodic-tripleo-centos-8-buildimage-ironic-python-agent-wallaby
         - periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset035-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-              - periodic-tripleo-centos-8-buildimage-overcloud-full-wallaby
-              - periodic-tripleo-centos-8-buildimage-overcloud-hardened-uefi-full-wallaby
-              - periodic-tripleo-centos-8-buildimage-ironic-python-agent-wallaby
+            dependencies: *ovb_deps_wallaby
         - periodic-tripleo-ci-centos-8-ovb-1ctlr_2comp-featureset020-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-              - periodic-tripleo-centos-8-buildimage-overcloud-full-wallaby
-              - periodic-tripleo-centos-8-buildimage-overcloud-hardened-uefi-full-wallaby
-              - periodic-tripleo-centos-8-buildimage-ironic-python-agent-wallaby
-        - periodic-tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset002-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
+            dependencies: *ovb_deps_wallaby
+        - periodic-tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset002-wallaby: *build_containers_ubi_wallaby
         - periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp_1supp-featureset039-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-              - periodic-tripleo-centos-8-buildimage-overcloud-full-wallaby
-              - periodic-tripleo-centos-8-buildimage-overcloud-hardened-uefi-full-wallaby
-              - periodic-tripleo-centos-8-buildimage-ironic-python-agent-wallaby
+            dependencies: *ovb_deps_wallaby
         ## multinode
-        - periodic-tripleo-ci-centos-8-scenario007-multinode-oooq-container-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-        - periodic-tripleo-ci-centos-8-containers-multinode-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-        - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
+        - periodic-tripleo-ci-centos-8-scenario007-multinode-oooq-container-wallaby: *build_containers_ubi_wallaby
+        - periodic-tripleo-ci-centos-8-containers-multinode-wallaby: *build_containers_ubi_wallaby
+        - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-wallaby: *build_containers_ubi_wallaby
         ## undercloud
-        - periodic-tripleo-ci-centos-8-undercloud-containers-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
-        - periodic-tripleo-ci-centos-8-undercloud-upgrade-wallaby:
-            dependencies:
-              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
+        - periodic-tripleo-ci-centos-8-undercloud-containers-wallaby: *build_containers_ubi_wallaby
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-wallaby: *build_containers_ubi_wallaby
         - periodic-tripleo-centos-8-wallaby-promote-promoted-components-to-tripleo-ci-testing
