Added sc10 kvm job in wallaby integration line.
Signed-off-by: Amol Kahat <amolkahat@gmail.com>
Change-Id: I17a1167df0ea1837ddd9196853bbcc46085547b7

--- a/zuul.d/integration-pipeline-wallaby.yaml
+++ b/zuul.d/integration-pipeline-wallaby.yaml
@@ -49,6 +49,9 @@
         - periodic-tripleo-ci-centos-8-standalone-full-tempest-scenario-wallaby:
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
+        - periodic-tripleo-ci-centos-8-scenario010-kvm-standalone-wallaby:
+            dependencies:
+              - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
         - periodic-tripleo-ci-centos-8-scenario010-ovn-provider-standalone-wallaby:
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-wallaby
