--- a/zuul.d/nodesets.yaml
+++ b/zuul.d/nodesets.yaml
@@ -228,6 +228,29 @@
           - secondary
 
 - nodeset:
+    name: three-centos-8-nodes
+    nodes:
+      - name: primary
+        label: upstream-centos-8-stream
+      - name: secondary-1
+        label: upstream-centos-8-stream
+      - name: secondary-2
+        label: upstream-centos-8-stream
+    groups:
+      - name: switch
+        nodes:
+          - primary
+      - name: peers
+        nodes:
+          - secondary-1
+          - secondary-2
+      - name: subnodes
+        nodes:
+          - secondary-1
+          - secondary-2
+
+
+- nodeset:
     name: tripleo-ovb-centos-8-primary
     nodes:
       - name: primary
